[tool.poetry]
name = "DockerDive"
version = "0.1.0"
description = ""
authors = ["NaveenKumarReddy8 <mr.naveen8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
redis = "^4.1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
isort = "^5.10.1"
black = "^22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
