[tool.poetry]
name = "DockerDive"
version = "0.1.0"
description = ""
authors = ["NaveenKumarReddy8 <mr.naveen8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
redis = "^4.1.2"
jupyterlab = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
isort = "^5.10.1"
black = "^22.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
