[tool.poetry]
name = "DockerDive"
version = "0.1.0"
description = ""
authors = ["NaveenKumarReddy8 <mr.naveen8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
redis = "^4.5.3"
jupyterlab = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
isort = "^5.12.0"
black = "^22.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
